<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="copy_rights">Yaan Cab Standard &#169; 2021</string>
    <string name="amt_placeholder" translatable="false">$ XX.xx</string>
    <string name="distance_placeholder" translatable="false">XX.xx Km</string>
    <string name="time_placeholder" translatable="false">XX.xx min</string>
    <string name="text_placeholder" translatable="false">XX xx XX xx</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="or_connect_with_social">Or connect with social</string>
    <string name="walk_1">Welcome</string>
    <string name="walk_2">Drive with Yaan Cab</string>
    <string name="walk_3">Earn</string>
    <string name="walk_1_description">Opportunities wherever you are. Make the most of your time on the road with the new platform.</string>
    <string name="walk_2_description">Become your own boss. Track your profits in real time every day.</string>
    <string name="walk_3_description">Become partners of the driver\'s preferred application. Generate your income while managing your schedule.</string>
    <string name="lorum">Lorem.</string>
    <string name="welcome_back_sign_in_to_continue">Welcome back, sign in to continue</string>
    <string name="what_your_email_address">What\'s your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="invalid_email">Please enter email address</string>
    <string name="invalid_password">Please enter password</string>
    <string name="name_exampple_com">name@example.com</string>
    <string name="curr_pwd_val">Please enter current password!</string>
    <string name="confirm_pwd_val">Please enter confirm password!</string>
    <string name="enter_the_details_you_used_to_register">Enter the details you used to register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="timezone">Timezone</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="enter_your_mail_id_for_recover">Enter your mail ID for recovery</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="forgot_password_note_msg">Note : Please enter the OTP send to your registered email address</string>
    <string name="otp_validation">OTP field is required</string>
    <string name="reset_password">Reset Password</string>
    <string name="name_example_com">name@example.com</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="note_please_enter_the_otp_send_tc_your_registered_email_address">Note: Please enter the OTP send to your registered email address</string>
    <string name="trip_type">Trip type</string>
    <string name="business">Business</string>
    <string name="personal">Personal</string>
    <string name="rental">Rental</string>
    <string name="vehicle_make">Vehicle make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_year">Vehicle Year</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="vehicle_license_plate">Vehicle License Plate</string>
    <string name="city">City</string>
    <string name="car_category">Car Category</string>
    <string name="outstation">Outstation</string>
    <string name="shuttle">Shuttle</string>
    <string name="round_trip">Round Trip</string>
    <string name="one_way">One way</string>
    <string name="i_have_read_and_agreed_the_n_terms_and_conditions">I have read and agreed the Terms and Conditions</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="payment">Payment</string>
    <string name="nav_card">Card</string>
    <string name="your_trips">Your Trips</string>
    <string name="coupon">Coupon</string>
    <string name="card_payment">Card Payment</string>
    <string name="other_payment">Other Payments</string>
    <string name="change_card_for_payments">Change card for payments</string>
    <string name="wallet">Wallet</string>
    <string name="passbook">Passbook</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="share_content_referral">Prime de parrainage, %1$s \nUser - https://play.google.com/store/apps/details?id=com.yaancab.app \nProvider - https://play.google.com/store/apps/details?id=com.Awiyi Taxi.driver.\nInstall cette appli avec le code de parrainage %2$s</string>
    <string name="invite_referral">Invite Referral</string>
    <string name="faq_support">FAQ Support</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="earnings">Earnings</string>
    <string name="summary">Summary</string>
    <string name="walletTransactions">Document</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="upcoming_trip_details">Upcoming Trip Details</string>
    <string name="no_data_found">No data found</string>
    <string name="no_past_found">No Past Trips found</string>
    <string name="no_upcoming_found">No Upcoming Trips found</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_id_">Booking ID: %s</string>
    <string name="favorites">Favorites</string>
    <string name="choose_language">Choose Language</string>
    <string name="lost_my_item">Lost my item</string>
    <string name="incorrect_charge_dispute">Incorrect charge dispute</string>
    <string name="i_would_like_to_refund">I would like to refund</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="reason_for_canceling">Reason for canceling</string>
    <string name="ratings">Ratings</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="call">Call</string>
    <string name="pay_via">Pay via</string>
    <string name="comments">Comments</string>
    <string name="cash">Cash</string>
    <string name="view_receipt">View Receipt</string>
    <string name="payment_method">Payment Method</string>
    <string name="invoice">Invoice</string>
    <string name="pay_now">Pay now</string>
    <string name="time_taken">Time Taken</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="base_fare">Base Fare</string>
    <string name="distance_fare">Distance Fare</string>
    <string name="tax">Tax</string>
    <string name="tips">Tips</string>
    <string name="add_tips">Add tips</string>
    <string name="total">Total</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="profile">Profile</string>
    <string name="service">Service</string>
    <string name="save">Save</string>
    <string name="today_completed_target">Today\'s Completed Target</string>
    <string name="sample_earnings" translatable="false">0/0</string>
    <string name="target_completed">Target</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="amount">Amount</string>
    <string name="no_rides">No rides completed.</string>
    <string name="total_rides">TOTAL NO OF RIDES</string>
    <string name="revenue">REVENUE</string>
    <string name="schedule_rides">NO OF SCHEDULED RIDES</string>
    <string name="canceled_rides">CANCELLED RIDES</string>
    <string name="rides">Rides</string>
    <string name="past_trip_detail">Past Trip Detail</string>
    <string name="upcoming_tripdetail">Upcoming Trip Detail</string>
    <string name="support">Support</string>
    <string name="our_team_persons_will_contact_you_soon">Our team persons will contact you soon!</string>
    <string name="refer_your_friends_to_drive">Refer your friends to drive!</string>
    <string name="give_the_free_ride_by_reffering_the_invite_code_worth_10vce">Give the free ride by referring the invite code worth %s</string>
    <string name="share_your_invite_code">Share your Invite Code</string>
    <string name="refferal_earning">Referral earning</string>
    <string name="total_members">Total Members</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_refferal">Invite Refferal</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="looking_to_change_password">Looking to change password</string>
    <string name="go_offline">GO OFFLINE</string>
    <string name="go_online">GO ONLINE</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="timer_start">1</string>
    <string name="schedule">Schedule</string>
    <string name="pick_up">Picked up Location </string>
    <string name="pick_up_invoice">PickedUp </string>
    <string name="drop_at">Drop Location </string>
    <string name="arrived">ARRIVED</string>
    <string name="picked_up">PICKED UP</string>
    <string name="tap_when_dropped">TAP WHEN DROPPED</string>
    <string name="rate_your_trip">Rate your trip with </string>
    <string name="cancel">CANCEL</string>
    <string name="promotion_applied">Promotion applied</string>
    <string name="wallet_detection">Wallet detection</string>
    <string name="amount_to_be_paid">Amount to be Paid</string>
    <string name="write_your_reviews">Write your reviews</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="choose_city">Choose City</string>
    <string name="invalid_first_name">Please enter first name</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic">Arabic</string>
    <string name="french">Français</string>
    <string name="your_wallet_amount_is">Your wallet amount is</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="date">Date</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="no_wallet_history">No wallet history</string>
    <string name="add_amount">Add Amount</string>
    <string name="change_language">Change Language</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="by_continuing_you_agree_that_you_have_read_and_accept_our_t_amp_cs_and_privacy_policy"><![CDATA[By continuing, you agree that you have read and accept our T&Cs And Privacy Policy]]></string>
</resources>