<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/ivRequestMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:text="Request Money"
            android:textColor="#fff" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbars="none">

        <ImageView
            android:id="@+id/ivWallet"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_margin="15dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_wallet" />

        <TextView
            android:id="@+id/tvAmtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_wallet_amount_is"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvWalletAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/addamountWalletContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:id="@+id/enterTheAmountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_the_amount"
                    android:textColor="#3b3b3b"
                    android:textSize="@dimen/_12sdp"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/enterTheAmountTv"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/etRequestAmt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/window_background"
                        android:hint="100"
                        android:inputType="numberDecimal"
                        android:labelFor="@+id/tvSubmit"
                        android:padding="15dp"
                        android:textSize="@dimen/text_14" />

                    <Button
                        android:id="@+id/addAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:padding="15dp"
                        android:text="@string/add_amount"
                        android:textColor="#FFF"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvWalletContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/llWalletHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/window_background"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:paddingStart="8dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/transaction_id"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/amount"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvWalletData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/window_background" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvWalletPlaceholder"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_wallet_history"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_22"
                android:textStyle="bold"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>