<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_loginn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/_75sdp"
        android:background="@drawable/button_round_white_strokegey"
        android:elevation="@dimen/_1sdp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="@dimen/_12ssp"

        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/quantum_black_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_registerry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:background="@drawable/border_bottom"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/clanpro_medium"
        android:padding="16dp"
        android:text="@string/choose_language"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grplanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="choose_language,textView5" />

    <RadioGroup
        android:id="@+id/choose_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="@dimen/_5sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:backgroundTint="@color/white"
            android:checked="true"
            android:ellipsize="end"
            android:fontFamily="@font/clanpro_narrnews"
            android:padding="12dp"
            android:singleLine="true"
            android:text="@string/english"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_18" />

        <RadioButton
            android:id="@+id/french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:backgroundTint="@color/white"
            android:checked="true"
            android:ellipsize="end"
            android:fontFamily="@font/clanpro_narrnews"
            android:padding="12dp"
            android:singleLine="true"
            android:text="@string/french"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_18" />
        <RadioButton
            android:id="@+id/arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:backgroundTint="@color/white"
            android:ellipsize="end"
            android:fontFamily="@font/clanpro_narrnews"
            android:padding="12dp"
            android:singleLine="true"
            android:text="@string/arabic"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_18" />

    </RadioGroup>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_languages"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_round_white_strokegey"
        android:elevation="@dimen/_1sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="Language"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_9sdp"

        android:textColor="@color/quantum_black_100"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/tv_registerry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_registerry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_round_white_strokegey"
        android:elevation="@dimen/_1sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/quantum_black_100"
        app:layout_constraintBottom_toBottomOf="@+id/tv_loginn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_loginn"
        app:layout_constraintTop_toTopOf="@+id/tv_loginn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_9sdp"
        android:elevation="@dimen/_5sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_loginn"
        app:layout_constraintStart_toStartOf="@+id/tv_loginn"
        app:layout_constraintTop_toTopOf="@+id/tv_loginn"
        app:srcCompat="@drawable/ic_google" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_9sdp"
        android:elevation="@dimen/_5sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_registerry"
        app:layout_constraintEnd_toEndOf="@+id/tv_registerry"
        app:layout_constraintTop_toTopOf="@+id/tv_registerry"
        app:srcCompat="@drawable/ic_google" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:layout_marginBottom="@dimen/_90sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_loginn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/backfull"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_11sdp"

        android:visibility="gone"
        android:fontFamily="@font/roboto_medium"
        android:lineHeight="@dimen/_12sdp"
        android:textSize="@dimen/_8ssp"
        android:text="@string/by_continuing_you_agree_that_you_have_read_and_accept_our_t_amp_cs_and_privacy_policy"
        android:textColor="#60000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_registerry"
        app:layout_constraintStart_toStartOf="@+id/tv_loginn" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleY="1.2"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/curve" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#fff"
        android:lineHeight="@dimen/_21sdp"
        android:gravity="left"
        android:text="Explore new ways to \ntravel Safely"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/tv_loginn"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
</androidx.constraintlayout.widget.ConstraintLayout>